--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>ToDo List</title>
 	</head>
 	<body>
-		<div>
+		<div id="container">
 			<h1>To-Do List</h1>
 			<form id="todo-form">
 				<input id="todo_text" type="text" placeholder="Add New Item" />
