--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<div id="container">
-			<h1>To-Do List</h1>
+			<h1>To-Do List<span id="clear-list">Clear List</span></h1>
+
 			<form id="todo-form">
 				<input id="todo_text" type="text" placeholder="Add New Item" />
 			</form>
