--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>To-Do List<span id="clear-list">Clear List</span></h1>
 
 			<form id="todo-form">
-				<input id="todo_text" type="text" placeholder="Add New Item" />
+				<input id="todo_text" type="text" placeholder="Add New Item" required />
 			</form>
 
 			<ul id="todo-list"></ul>
